restored clean samples

--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -206,72 +206,39 @@
    "execution_count": 6
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-17T04:35:08.578253Z",
-     "start_time": "2025-11-17T04:34:48.212762Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
+    "model = \"qwen/qwen3-4b-2507\"\n",
+    "# model=\"openai/gpt-oss-20b\",\n",
+    "\n",
     "process_food_kg_df(\n",
     "    df=df,\n",
-    "    model=\"qwen/qwen3-4b-2507\",\n",
-    "    # model=\"openai/gpt-oss-20b\",  # 86.69% accuracy\n",
+    "    model=model,\n",
     "    client=client,\n",
     "    restart=True,  # reset the checkpoints\n",
-    "    stop_at=100\n",
+    "    stop_at=1000\n",
     ")"
    ],
-   "id": "80690d7c926fbade",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote part_0_99.csv (0:100) — checkpoint=99\n",
-      "Done.\n"
-     ]
-    }
-   ],
-   "execution_count": 7
+   "id": "73941be59890037"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-17T04:35:08.618141Z",
-     "start_time": "2025-11-17T04:35:08.608275Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
-   "source": "final_df = assemble_food_kg_df()",
-   "id": "4cd2360f0d7a4607",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": null,
+   "source": "final_df = assemble_food_kg_df()",
+   "id": "2180e8350bbc873"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-17T04:35:08.631201Z",
-     "start_time": "2025-11-17T04:35:08.629026Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": "len(final_df)",
-   "id": "c39a3279b916c528",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 9
+   "id": "fc2663d98b33748d"
   },
   {
    "metadata": {},
@@ -286,9 +253,7 @@
     "    \"ingredients\": final_df[\"ingredients\"],  # new, kept upon request\n",
     "    \"ingredients_normalized\": final_df[\"ingredients_normalized\"].apply(json.dumps),\n",
     "}).sort_values(\"id\")\n",
-    "# Create a directory if it doesn't exist and save\n",
-    "os.makedirs(\"data/output\", exist_ok=True)\n",
-    "ingredients_table.to_csv(\"data/output/processed_ingredients.csv\", index=False)"
+    "# Create a directory if it doesn't exist and save"
    ],
    "id": "32402a8e1820fcca"
   },
@@ -297,116 +262,27 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "ingredients_table.tail()",
-   "id": "b0b88249f1e568ff"
+   "source": [
+    "os.makedirs(\"data/output\", exist_ok=True)\n",
+    "ingredients_table.to_csv(\"data/output/processed_ingredients.csv\", index=False)"
+   ],
+   "id": "eb5333d7ca02f839"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-17T04:35:08.694067Z",
-     "start_time": "2025-11-17T04:35:08.690379Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "ingredients_table.tail()",
+   "id": "3db07683cb4bba1d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": "final_df.head()",
-   "id": "5d8d66f64f64812c",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "   id                  title  \\\n",
-       "0   0    No-Bake Nut Cookies   \n",
-       "1   1  Jewell Ball'S Chicken   \n",
-       "2   2            Creamy Corn   \n",
-       "3   3          Chicken Funny   \n",
-       "4   4     Reeses Cups(Candy)   \n",
-       "\n",
-       "                                         ingredients  \\\n",
-       "0  ['1 c. firmly packed brown sugar', '1/2 c. eva...   \n",
-       "1  ['1 small jar chipped beef, cut up', '4 boned ...   \n",
-       "2  ['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...   \n",
-       "3  ['1 large whole chicken', '2 (10 1/2 oz.) cans...   \n",
-       "4  ['1 c. peanut butter', '3/4 c. graham cracker ...   \n",
-       "\n",
-       "                              ingredients_normalized  \n",
-       "0  ['brown sugar', 'evaporated milk', 'vanilla', ...  \n",
-       "1  ['chipped beef', 'chicken breast', 'cream of m...  \n",
-       "2  ['corn', 'cream cheese', 'butter', 'garlic pow...  \n",
-       "3  ['chicken', 'chicken gravy', 'mushroom soup', ...  \n",
-       "4  ['peanut butter', 'graham cracker crumbs', 'bu...  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>ingredients</th>\n",
-       "      <th>ingredients_normalized</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>No-Bake Nut Cookies</td>\n",
-       "      <td>['1 c. firmly packed brown sugar', '1/2 c. eva...</td>\n",
-       "      <td>['brown sugar', 'evaporated milk', 'vanilla', ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Jewell Ball'S Chicken</td>\n",
-       "      <td>['1 small jar chipped beef, cut up', '4 boned ...</td>\n",
-       "      <td>['chipped beef', 'chicken breast', 'cream of m...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Creamy Corn</td>\n",
-       "      <td>['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...</td>\n",
-       "      <td>['corn', 'cream cheese', 'butter', 'garlic pow...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Chicken Funny</td>\n",
-       "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
-       "      <td>['chicken', 'chicken gravy', 'mushroom soup', ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Reeses Cups(Candy)</td>\n",
-       "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
-       "      <td>['peanut butter', 'graham cracker crumbs', 'bu...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 12
+   "id": "b52aedecae86872d"
   },
   {
    "metadata": {
