--- a/unique_ingredients.ipynb
+++ b/unique_ingredients.ipynb
@@ -6,18 +6,30 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-07T03:13:56.852726Z",
-     "start_time": "2025-11-07T03:13:56.850406Z"
+     "end_time": "2025-11-21T19:37:09.188564Z",
+     "start_time": "2025-11-21T19:37:09.168535Z"
     }
    },
    "source": [
     "import ast\n",
     "import json\n",
+    "import os\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()  # Take environment variables from .env\n",
+    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "\n",
+    "from openai import OpenAI\n",
+    "\n",
+    "client = OpenAI(\n",
+    "    base_url=\"http://localhost:1234/v1\",  # local model\n",
+    "    api_key=api_key\n",
+    ")"
    ],
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 2
   },
   {
    "metadata": {
@@ -29,24 +41,15 @@
    "cell_type": "code",
    "source": [
     "# Read the CSV\n",
-    "df = pd.read_csv(\"data/_backup/FoodKG_ingredients_normalized.csv\")\n",
-    "\n",
+    "df = pd.read_csv(\"data/output/processed_ingredients.csv\")\n",
     "# Parse the JSON-style ingredient lists\n",
     "df[\"ingredients_normalized\"] = df[\"ingredients_normalized\"].apply(json.loads)\n",
-    "\n",
     "# Ensure they're lists\n",
     "df[\"ingredients_list\"] = df[\"ingredients_normalized\"].apply(\n",
     "    lambda x: ast.literal_eval(str(x)) if isinstance(x, str) else x\n",
     ")\n",
-    "\n",
     "# Flatten all lists and deduplicate\n",
-    "unique_ingredients = sorted({item for sublist in df[\"ingredients_list\"] for item in sublist})\n",
-    "\n",
-    "# Save to a text file, one ingredient per line\n",
-    "with open(\"unique_ingredients.txt\", \"w\", encoding=\"utf-8\") as f:\n",
-    "    f.write(\"\\n\".join(unique_ingredients))\n",
-    "\n",
-    "print(f\"Saved {len(unique_ingredients)} unique ingredients to unique_ingredients.txt\")\n"
+    "unique_ingredients = sorted({item for sublist in df[\"ingredients_list\"] for item in sublist})"
    ],
    "id": "4e9a625e9f53986b",
    "outputs": [
@@ -61,6 +64,20 @@
    "execution_count": 39
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Save to a text file, one ingredient per line\n",
+    "with open(\"/checkpoints/unique_ingredients.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(\"\\n\".join(unique_ingredients))\n",
+    "\n",
+    "print(f\"Saved {len(unique_ingredients)} unique ingredients to unique_ingredients.txt\")"
+   ],
+   "id": "ec10d4f76bbcbe57"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-11-07T03:13:57.057969Z",
@@ -71,11 +88,36 @@
    "source": [
     "gpt_prompt = \"\"\"\n",
     "Remove duplicates and anything that isn't an ingredient.\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "model = \"qwen/qwen3-4b-2507\""
    ],
    "id": "2ee55cd3efb373c7",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# reinforce JSON-only on the user message\n",
+    "response = client.chat.completions.create(\n",
+    "    model=model,\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": gpt_prompt},\n",
+    "    ],\n",
+    ")"
+   ],
+   "id": "e4677b084927f0c1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "response",
+   "id": "24ef9a457fdc7ab8"
   }
  ],
  "metadata": {
