fixed unique ingredients logic

--- a/unique_ingredients.ipynb
+++ b/unique_ingredients.ipynb
@@ -6,36 +6,24 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:37:09.188564Z",
-     "start_time": "2025-11-21T19:37:09.168535Z"
+     "end_time": "2025-11-21T20:46:31.542151Z",
+     "start_time": "2025-11-21T20:46:31.132022Z"
     }
    },
    "source": [
     "import ast\n",
     "import json\n",
-    "import os\n",
     "\n",
-    "import pandas as pd\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv()  # Take environment variables from .env\n",
-    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
-    "\n",
-    "from openai import OpenAI\n",
-    "\n",
-    "client = OpenAI(\n",
-    "    base_url=\"http://localhost:1234/v1\",  # local model\n",
-    "    api_key=api_key\n",
-    ")"
+    "import pandas as pd"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T03:13:57.052811Z",
-     "start_time": "2025-11-07T03:13:56.859972Z"
+     "end_time": "2025-11-21T20:46:31.563594Z",
+     "start_time": "2025-11-21T20:46:31.546969Z"
     }
    },
    "cell_type": "code",
@@ -47,77 +35,100 @@
     "# Ensure they're lists\n",
     "df[\"ingredients_list\"] = df[\"ingredients_normalized\"].apply(\n",
     "    lambda x: ast.literal_eval(str(x)) if isinstance(x, str) else x\n",
-    ")\n",
-    "# Flatten all lists and deduplicate\n",
-    "unique_ingredients = sorted({item for sublist in df[\"ingredients_list\"] for item in sublist})"
+    ")"
    ],
-   "id": "4e9a625e9f53986b",
+   "id": "950440ddc1f05c40",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-21T20:46:31.571478Z",
+     "start_time": "2025-11-21T20:46:31.568Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df[\"ingredients_list\"].head(5)",
+   "id": "e78087b53ba0cf68",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [brown sugar, evaporated milk, vanilla, pecan,...\n",
+       "1    [chipped beef, chicken breast, cream of mushro...\n",
+       "2    [corn, cream cheese, butter, garlic powder, sa...\n",
+       "3    [chicken, chicken gravy, cream of mushroom sou...\n",
+       "4    [peanut butter, graham cracker, butter, powder...\n",
+       "Name: ingredients_list, dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-21T20:49:41.644545Z",
+     "start_time": "2025-11-21T20:49:41.640225Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Flatten all lists and deduplicate\n",
+    "ingredients_set = set()\n",
+    "for sublist in df[\"ingredients_list\"]:\n",
+    "    for item in sublist:\n",
+    "        ingredients_set.add(item)\n",
+    "unique_ingredients = sorted(ingredients_set)  # list of sorted ingredients"
+   ],
+   "id": "79030791909443d6",
+   "outputs": [],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-21T20:49:41.946570Z",
+     "start_time": "2025-11-21T20:49:41.942305Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Save to a text file, one ingredient per line\n",
+    "with open(\"checkpoints/unique_ingredients.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(\"\\n\".join(unique_ingredients))\n",
+    "\n",
+    "print(f\"Saved {len(unique_ingredients)} unique ingredients to unique_ingredients.txt\")"
+   ],
+   "id": "ec10d4f76bbcbe57",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 2019 unique ingredients to unique_ingredients.txt\n"
+      "Saved 1050 unique ingredients to unique_ingredients.txt\n"
      ]
     }
    ],
-   "execution_count": 39
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "# Save to a text file, one ingredient per line\n",
-    "with open(\"/checkpoints/unique_ingredients.txt\", \"w\", encoding=\"utf-8\") as f:\n",
-    "    f.write(\"\\n\".join(unique_ingredients))\n",
-    "\n",
-    "print(f\"Saved {len(unique_ingredients)} unique ingredients to unique_ingredients.txt\")"
-   ],
-   "id": "ec10d4f76bbcbe57"
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T03:13:57.057969Z",
-     "start_time": "2025-11-07T03:13:57.056712Z"
+     "end_time": "2025-11-21T20:46:31.756556Z",
+     "start_time": "2025-11-21T20:43:04.767909Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "gpt_prompt = \"\"\"\n",
-    "Remove duplicates and anything that isn't an ingredient.\n",
-    "\"\"\"\n",
-    "model = \"qwen/qwen3-4b-2507\""
-   ],
-   "id": "2ee55cd3efb373c7",
+   "source": "",
+   "id": "6e1ae8212249ee66",
    "outputs": [],
    "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "# reinforce JSON-only on the user message\n",
-    "response = client.chat.completions.create(\n",
-    "    model=model,\n",
-    "    messages=[\n",
-    "        {\"role\": \"system\", \"content\": gpt_prompt},\n",
-    "    ],\n",
-    ")"
-   ],
-   "id": "e4677b084927f0c1"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "response",
-   "id": "24ef9a457fdc7ab8"
   }
  ],
  "metadata": {
