issue with max tokens

--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -3,7 +3,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Goal: separate the ingrdients in the FoodKG table into a list of ingredients",
+   "source": "Goal: separate the ingredients in the FoodKG table into a list of ingredients",
    "id": "5bcd2d4a58af6727"
   },
   {
@@ -22,8 +22,6 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "from llm_util import process_food_kg_df, assemble_food_kg_df\n",
-    "\n",
-    "# from sqlalchemy import create_engine\n",
     "\n",
     "load_dotenv()  # Take environment variables from .env\n",
     "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
@@ -60,7 +58,7 @@
     }
    },
    "cell_type": "code",
-   "source": "df.head()",
+   "source": "df.head(5)",
    "id": "4ef10a212309e765",
    "outputs": [
     {
@@ -209,6 +207,7 @@
     "    model=model,\n",
     "    client=client,\n",
     "    restart=True,  # reset the checkpoints\n",
+    "    batch_size=100,\n",
     "    stop_at=1000\n",
     ")"
    ],
