--- a/process_food_branded_experimental.ipynb
+++ b/process_food_branded_experimental.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:15:56.411Z",
-     "start_time": "2025-11-21T21:15:55.395929Z"
+     "end_time": "2025-11-21T22:13:47.236513Z",
+     "start_time": "2025-11-21T22:13:47.223942Z"
     }
    },
    "source": [
@@ -36,26 +36,26 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:15:57.187947Z",
-     "start_time": "2025-11-21T21:15:56.416830Z"
+     "end_time": "2025-11-21T22:13:47.806877Z",
+     "start_time": "2025-11-21T22:13:47.241143Z"
     }
    },
    "cell_type": "code",
    "source": "df = pd.read_csv(\"data/raw/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv\")",
    "id": "e9a0b822a43439df",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:15:57.202518Z",
-     "start_time": "2025-11-21T21:15:57.195141Z"
+     "end_time": "2025-11-21T22:13:47.815935Z",
+     "start_time": "2025-11-21T22:13:47.812942Z"
     }
    },
    "cell_type": "code",
@@ -126,18 +126,18 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:22:55.650061Z",
-     "start_time": "2025-11-21T21:17:34.012779Z"
+     "end_time": "2025-11-21T22:19:01.309611Z",
+     "start_time": "2025-11-21T22:13:47.838385Z"
     }
    },
    "cell_type": "code",
@@ -173,26 +173,26 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:22:58.827937Z",
-     "start_time": "2025-11-21T21:22:58.815874Z"
+     "end_time": "2025-11-21T22:19:01.363095Z",
+     "start_time": "2025-11-21T22:19:01.355812Z"
     }
    },
    "cell_type": "code",
    "source": "final_df = assemble_branded_food_experimental_df()",
    "id": "4cd2360f0d7a4607",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:23:01.468377Z",
-     "start_time": "2025-11-21T21:23:01.464119Z"
+     "end_time": "2025-11-21T22:19:01.369032Z",
+     "start_time": "2025-11-21T22:19:01.366878Z"
     }
    },
    "cell_type": "code",
@@ -205,18 +205,18 @@
        "1000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:23:04.979118Z",
-     "start_time": "2025-11-21T21:23:04.974041Z"
+     "end_time": "2025-11-21T22:19:01.379521Z",
+     "start_time": "2025-11-21T22:19:01.377053Z"
     }
    },
    "cell_type": "code",
@@ -230,13 +230,13 @@
    ],
    "id": "9d1d7f53f01db112",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:23:06.276680Z",
-     "start_time": "2025-11-21T21:23:06.270449Z"
+     "end_time": "2025-11-21T22:22:22.441567Z",
+     "start_time": "2025-11-21T22:22:22.436500Z"
     }
    },
    "cell_type": "code",
@@ -313,32 +313,37 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:23:25.410903Z",
-     "start_time": "2025-11-21T21:23:25.403960Z"
+     "end_time": "2025-11-21T22:20:26.631640Z",
+     "start_time": "2025-11-21T22:20:26.625017Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# Create directory if it doesn't exist and save\n",
+    "# Create a directory if it doesn't exist and save\n",
     "os.makedirs(\"data/output\", exist_ok=True)\n",
     "product_table.to_csv(\"data/output/processed_products.csv\", index=False)"
    ],
    "id": "7fb705d14acb970e",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 21
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-21T22:19:01.443163Z",
+     "start_time": "2025-11-21T22:19:01.441846Z"
+    }
+   },
    "cell_type": "code",
    "source": "",
    "id": "5d8d66f64f64812c",
