--- a/test_products.ipynb
+++ b/test_products.ipynb
@@ -6,19 +6,19 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:53:47.057655Z",
-     "start_time": "2025-11-21T21:53:47.055122Z"
+     "end_time": "2025-11-21T22:23:45.534758Z",
+     "start_time": "2025-11-21T22:23:45.130960Z"
     }
    },
    "source": "import pandas as pd",
    "outputs": [],
-   "execution_count": 41
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:53:47.063775Z",
-     "start_time": "2025-11-21T21:53:47.061716Z"
+     "end_time": "2025-11-21T22:23:45.540035Z",
+     "start_time": "2025-11-21T22:23:45.538518Z"
     }
    },
    "cell_type": "code",
@@ -33,13 +33,13 @@
    ],
    "id": "c40f4db3338a47eb",
    "outputs": [],
-   "execution_count": 42
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:53:47.075529Z",
-     "start_time": "2025-11-21T21:53:47.068224Z"
+     "end_time": "2025-11-21T22:23:45.551692Z",
+     "start_time": "2025-11-21T22:23:45.543648Z"
     }
    },
    "cell_type": "code",
@@ -140,18 +140,18 @@
        "</div>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 43
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:53:47.105811Z",
-     "start_time": "2025-11-21T21:53:47.099578Z"
+     "end_time": "2025-11-21T22:23:45.643325Z",
+     "start_time": "2025-11-21T22:23:45.637317Z"
     }
    },
    "cell_type": "code",
@@ -296,18 +296,18 @@
        "</div>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 44
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:53:47.165416Z",
-     "start_time": "2025-11-21T21:53:47.163029Z"
+     "end_time": "2025-11-21T22:23:45.704537Z",
+     "start_time": "2025-11-21T22:23:45.702216Z"
     }
    },
    "cell_type": "code",
@@ -342,20 +342,17 @@
    ],
    "id": "8fa3e827278c9d4a",
    "outputs": [],
-   "execution_count": 45
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:53:47.190765Z",
-     "start_time": "2025-11-21T21:53:47.168994Z"
+     "end_time": "2025-11-21T22:23:45.735350Z",
+     "start_time": "2025-11-21T22:23:45.713837Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# Elements that differ\n",
-    "new_df[\"pred_only\"] = new_df[\"pred_set\"] - new_df[\"test_set\"]\n",
-    "new_df[\"true_only\"] = new_df[\"test_set\"] - new_df[\"pred_set\"]\n",
     "# intersection size\n",
     "new_df[\"intersection_size\"] = new_df.apply(\n",
     "    lambda row: len(row[\"pred_set\"] & row[\"test_set\"]), axis=1\n",
@@ -373,42 +370,49 @@
    ],
    "id": "9896d7b214e009d",
    "outputs": [],
-   "execution_count": 46
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:53:47.217607Z",
-     "start_time": "2025-11-21T21:53:47.211280Z"
+     "end_time": "2025-11-21T22:23:45.779806Z",
+     "start_time": "2025-11-21T22:23:45.772569Z"
     }
    },
    "cell_type": "code",
-   "source": "new_df.head(5)",
+   "source": "new_df.head(100)",
    "id": "41631d2d2104c6c7",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "   fdc_id       description          pred_set              test_set  \\\n",
-       "0  167512         \"biscuit\"         {biscuit}  {buttermilk biscuit}   \n",
-       "1  167513  \"cinnamon rolls\"  {cinnamon rolls}       {cinnamon roll}   \n",
-       "2  167514    \"bread crumbs\"    {bread crumbs}         {bread crumb}   \n",
-       "3  167515  \"english muffin\"  {english muffin}      {english muffin}   \n",
-       "4  167516      \"buttermilk\"      {buttermilk}   {buttermilk waffle}   \n",
+       "    fdc_id          description             pred_set              test_set  \\\n",
+       "0   167512            \"biscuit\"            {biscuit}  {buttermilk biscuit}   \n",
+       "1   167513     \"cinnamon rolls\"     {cinnamon rolls}       {cinnamon roll}   \n",
+       "2   167514       \"bread crumbs\"       {bread crumbs}         {bread crumb}   \n",
+       "3   167515     \"english muffin\"     {english muffin}      {english muffin}   \n",
+       "4   167516         \"buttermilk\"         {buttermilk}   {buttermilk waffle}   \n",
+       "..     ...                  ...                  ...                   ...   \n",
+       "95  167607           \"raw meat\"           {raw meat}               {moose}   \n",
+       "96  167608        \"mashu roots\"        {mashu roots}          {mashu root}   \n",
+       "97  167609              \"liver\"              {liver}         {moose liver}   \n",
+       "98  167610  \"bearded seal meat\"  {bearded seal meat}                {seal}   \n",
+       "99  167611       \"bearded seal\"       {bearded seal}            {seal oil}   \n",
        "\n",
-       "          pred_only             true_only  intersection_size  union_size  \\\n",
-       "0         {biscuit}  {buttermilk biscuit}                  0           2   \n",
-       "1  {cinnamon rolls}       {cinnamon roll}                  0           2   \n",
-       "2    {bread crumbs}         {bread crumb}                  0           2   \n",
-       "3                {}                    {}                  1           1   \n",
-       "4      {buttermilk}   {buttermilk waffle}                  0           2   \n",
+       "    intersection_size  union_size  overlap  jaccard  precision  recall   f1  \n",
+       "0                   0           2      0.0      0.0        0.0     0.0  0.0  \n",
+       "1                   0           2      0.0      0.0        0.0     0.0  0.0  \n",
+       "2                   0           2      0.0      0.0        0.0     0.0  0.0  \n",
+       "3                   1           1      1.0      1.0        1.0     1.0  1.0  \n",
+       "4                   0           2      0.0      0.0        0.0     0.0  0.0  \n",
+       "..                ...         ...      ...      ...        ...     ...  ...  \n",
+       "95                  0           2      0.0      0.0        0.0     0.0  0.0  \n",
+       "96                  0           2      0.0      0.0        0.0     0.0  0.0  \n",
+       "97                  0           2      0.0      0.0        0.0     0.0  0.0  \n",
+       "98                  0           2      0.0      0.0        0.0     0.0  0.0  \n",
+       "99                  0           2      0.0      0.0        0.0     0.0  0.0  \n",
        "\n",
-       "   overlap  jaccard  precision  recall   f1  \n",
-       "0      0.0      0.0        0.0     0.0  0.0  \n",
-       "1      0.0      0.0        0.0     0.0  0.0  \n",
-       "2      0.0      0.0        0.0     0.0  0.0  \n",
-       "3      1.0      1.0        1.0     1.0  1.0  \n",
-       "4      0.0      0.0        0.0     0.0  0.0  "
+       "[100 rows x 11 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -433,8 +437,6 @@
        "      <th>description</th>\n",
        "      <th>pred_set</th>\n",
        "      <th>test_set</th>\n",
-       "      <th>pred_only</th>\n",
-       "      <th>true_only</th>\n",
        "      <th>intersection_size</th>\n",
        "      <th>union_size</th>\n",
        "      <th>overlap</th>\n",
@@ -451,8 +453,6 @@
        "      <td>\"biscuit\"</td>\n",
        "      <td>{biscuit}</td>\n",
        "      <td>{buttermilk biscuit}</td>\n",
-       "      <td>{biscuit}</td>\n",
-       "      <td>{buttermilk biscuit}</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0.0</td>\n",
@@ -465,8 +465,6 @@
        "      <th>1</th>\n",
        "      <td>167513</td>\n",
        "      <td>\"cinnamon rolls\"</td>\n",
-       "      <td>{cinnamon rolls}</td>\n",
-       "      <td>{cinnamon roll}</td>\n",
        "      <td>{cinnamon rolls}</td>\n",
        "      <td>{cinnamon roll}</td>\n",
        "      <td>0</td>\n",
@@ -483,8 +481,6 @@
        "      <td>\"bread crumbs\"</td>\n",
        "      <td>{bread crumbs}</td>\n",
        "      <td>{bread crumb}</td>\n",
-       "      <td>{bread crumbs}</td>\n",
-       "      <td>{bread crumb}</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0.0</td>\n",
@@ -499,8 +495,6 @@
        "      <td>\"english muffin\"</td>\n",
        "      <td>{english muffin}</td>\n",
        "      <td>{english muffin}</td>\n",
-       "      <td>{}</td>\n",
-       "      <td>{}</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
@@ -515,8 +509,90 @@
        "      <td>\"buttermilk\"</td>\n",
        "      <td>{buttermilk}</td>\n",
        "      <td>{buttermilk waffle}</td>\n",
-       "      <td>{buttermilk}</td>\n",
-       "      <td>{buttermilk waffle}</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>167607</td>\n",
+       "      <td>\"raw meat\"</td>\n",
+       "      <td>{raw meat}</td>\n",
+       "      <td>{moose}</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>167608</td>\n",
+       "      <td>\"mashu roots\"</td>\n",
+       "      <td>{mashu roots}</td>\n",
+       "      <td>{mashu root}</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>167609</td>\n",
+       "      <td>\"liver\"</td>\n",
+       "      <td>{liver}</td>\n",
+       "      <td>{moose liver}</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>167610</td>\n",
+       "      <td>\"bearded seal meat\"</td>\n",
+       "      <td>{bearded seal meat}</td>\n",
+       "      <td>{seal}</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>167611</td>\n",
+       "      <td>\"bearded seal\"</td>\n",
+       "      <td>{bearded seal}</td>\n",
+       "      <td>{seal oil}</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0.0</td>\n",
@@ -527,21 +603,22 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 11 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 47
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:53:47.270963Z",
-     "start_time": "2025-11-21T21:53:47.268823Z"
+     "end_time": "2025-11-21T22:23:45.834451Z",
+     "start_time": "2025-11-21T22:23:45.832185Z"
     }
    },
    "cell_type": "code",
@@ -566,13 +643,13 @@
      ]
     }
    ],
-   "execution_count": 48
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:53:47.283216Z",
-     "start_time": "2025-11-21T21:53:47.281164Z"
+     "end_time": "2025-11-21T22:23:45.848460Z",
+     "start_time": "2025-11-21T22:23:45.846458Z"
     }
    },
    "cell_type": "code",
@@ -585,18 +662,18 @@
        "300"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 49
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T21:53:47.297483Z",
-     "start_time": "2025-11-21T21:53:47.296144Z"
+     "end_time": "2025-11-21T22:23:45.882812Z",
+     "start_time": "2025-11-21T22:23:45.881486Z"
     }
    },
    "cell_type": "code",
